// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeginCourseButton snapshot renders default button 1`] = `
<Button
  as="a"
  disabled={false}
  href="homeUrl"
>
  Begin Course
</Button>
`;

exports[`BeginCourseButton snapshot renders disabled button 1`] = `
<Button
  as="a"
  disabled={true}
  href="homeUrl"
>
  Begin Course
</Button>
`;
